Name:                wreckage-samples
Version:             0.0.1
Synopsis:            Sample modules using Wreckage
-- Description:         
Homepage:            http://github.com/rgreayer/wreckage
License:             BSD3
License-file:        LICENSE
Author:              Robert Greayer
Maintainer:          robgreayer@gmail.com
-- Copyright:           
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2
Library
  Exposed-modules:     WreckTst
  Hs-source-dirs: src
  Build-depends: base >= 4, template-haskell, wreckage
  Ghc-options: -O0 -F -pgmF "prewreck"
